# Ziggo-Router-MCP-Server-Interface-Sagemcom-

./: .gitignore  INSTALLER_README.md  LICENSE  README.md  build-dist.sh  install-cli-dist.sh  install-mcp-dist.sh  pyproject.toml  uninstall.sh
.llm/: reference_mcp_servers.md
run_installer.app/Contents/: Info.plist
run_installer.app/Contents/MacOS/: applet
run_installer.app/Contents/Resources/Scripts/: main.scpt
run_installer.app/Contents/_CodeSignature/: CodeResources
src/sagemcom_mcp/: __init__.py  cli.py  client.py  server.py
tests/: test_cli_wrapper.py  test_sagemcom_client.py  test_server.py
