[project]
name = "sagemcom-mcp"
version = "0.1.1"
description = "MCP server for Sagemcom router port forwarding management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
sagemcom-mcp-server = "sagemcom_mcp.server:main"
sagemcom-cli = "sagemcom_mcp.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
